--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/MenuPorEmpresaPorUsuario/_TreeListPartial_menu_x_usuario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/MenuPorEmpresaPorUsuario/_TreeListPartial_menu_x_usuario.cshtml
@@ -5,9 +5,32 @@
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.KeyFieldName = "IdMenu";
         settings.ParentFieldName = "info_menu.IdMenuPadre";
+
+        settings.SettingsEditing.UpdateNodeRouteValues = new { Controller = "MenuPorEmpresaPorUsuario", Action = "EditingUpdate", Area = "SeguridadAcceso" };
+        settings.SettingsEditing.Mode = TreeListEditMode.EditFormAndDisplayNode;
+        settings.SettingsEditing.ConfirmDelete = true;
+        settings.Settings.GridLines = System.Web.UI.WebControls.GridLines.Both;
+        settings.SettingsBehavior.ExpandCollapseAction = TreeListExpandCollapseAction.NodeDblClick;
+
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowNewButtonInHeader = false;
+        settings.CommandColumn.NewButton.Visible = false;
+        settings.CommandColumn.DeleteButton.Visible = false;
+        settings.CommandColumn.EditButton.Visible = true;
+
+
+        settings.Toolbars.Add(t =>
+        {
+            t.ItemAlign = GridToolbarItemAlign.Right;
+            t.Position = GridToolbarPosition.Bottom;
+            t.Items.Add(ti => ti.Command = TreeListToolbarCommand.Update);
+            t.Items.Add(ti => ti.Command = TreeListToolbarCommand.Cancel);
+        });
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdMenu";
+            column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
         });
         settings.Columns.Add(column =>
@@ -15,15 +38,45 @@
             column.Caption = "*";
             column.FieldName = "seleccionado";
             column.ColumnType = MVCxTreeListColumnType.CheckBox;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
         });
+
         settings.Columns.Add(column =>
         {
             column.Caption = "Menú";
             column.FieldName = "info_menu.DescripcionMenu";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(90);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(80);
         });
-        
+
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Lectura";
+            column.FieldName = "Lectura";
+            column.ColumnType = MVCxTreeListColumnType.CheckBox;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Escritura";
+            column.FieldName = "Escritura";
+            column.ColumnType = MVCxTreeListColumnType.CheckBox;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Anulación";
+            column.FieldName = "Eliminacion";
+            column.ColumnType = MVCxTreeListColumnType.CheckBox;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        });
+
         settings.SettingsCookies.StoreSelection = true;
         settings.Settings.GridLines = System.Web.UI.WebControls.GridLines.Both;
         settings.SettingsPager.Visible = true;
