--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/MenuPorEmpresaPorUsuario/_TreeListPartial_menu_x_usuario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/MenuPorEmpresaPorUsuario/_TreeListPartial_menu_x_usuario.cshtml
@@ -1,10 +1,12 @@
+
+
 @{
     var treeList = Html.DevExpress().TreeList(settings => {
         settings.Name = "TreeList_menu_x_usuario";
         settings.CallbackRouteValues = new { Controller = "MenuPorEmpresaPorUsuario", Action = "TreeListPartial_menu_x_usuario", IdEmpresa = ViewBag.IdEmpresa, IdUsuario = ViewBag.IdUsuario };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.KeyFieldName = "IdMenu";
-        settings.ParentFieldName = "info_menu.IdMenuPadre";
+        settings.ParentFieldName = "IdMenuPadre";
 
         settings.SettingsEditing.UpdateNodeRouteValues = new { Controller = "MenuPorEmpresaPorUsuario", Action = "EditingUpdate", Area = "SeguridadAcceso" };
         settings.SettingsEditing.Mode = TreeListEditMode.EditFormAndDisplayNode;
@@ -17,16 +19,7 @@
         settings.CommandColumn.NewButton.Visible = false;
         settings.CommandColumn.DeleteButton.Visible = false;
         settings.CommandColumn.EditButton.Visible = true;
-
-
-        settings.Toolbars.Add(t =>
-        {
-            t.ItemAlign = GridToolbarItemAlign.Right;
-            t.Position = GridToolbarPosition.Bottom;
-            t.Items.Add(ti => ti.Command = TreeListToolbarCommand.Update);
-            t.Items.Add(ti => ti.Command = TreeListToolbarCommand.Cancel);
-        });
-
+        
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdMenu";
@@ -45,7 +38,7 @@
         settings.Columns.Add(column =>
         {
             column.Caption = "Menú";
-            column.FieldName = "info_menu.DescripcionMenu";
+            column.FieldName = "DescripcionMenu";
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = System.Web.UI.WebControls.Unit.Percentage(80);
         });
@@ -119,3 +112,4 @@
     });
 }
 @treeList.Bind(Model).GetHtml()
+
