--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
@@ -11,8 +11,17 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
 @using (Html.BeginForm("Anular", "PeriodoContable", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
+{ 
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
     @Html.HiddenFor(q => q.IdPeriodo)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -90,11 +99,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
             <div class="col-md-4">
                 <div class="form-group">
                     @Html.DevExpress().CheckBoxFor(q => q.pe_cerrado_bool,
@@ -108,6 +112,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="modal-body">
+        @Html.Action("GridViewPartial_Cierre_x_Modulo")
     </div>
 
     <div class="box-footer">
