--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOS/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOS/Index.cshtml
@@ -1,19 +1,37 @@
-﻿@model Core.Erp.Info.Helps.cl_filtros_Info
+﻿@model Core.Erp.Info.Compras.com_orden_aprobacion_Info
 
 @{
-    ViewBag.Title = "Orden de servicio";
+    ViewBag.Title = "Aprobación órdenes de servicio";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
+<script type="text/javascript">
 
+    var selectedIDs;
 
-<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Index", "OrdenServicio", FormMethod.Post, new { @role = "form", @class = "form" }))
+    function OnBeginCallback(s, e) {
+        //Pass all selected keys to GridView callback action
+        e.customArgs["selectedIDs"] = selectedIDs;
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
+    }
+    function OnSelectionChanged(s, e) {
+        s.GetSelectedFieldValues("IdOrdenCompra", GetSelectedFieldValuesCallback);
+
+    }
+    function GetSelectedFieldValuesCallback(values) {
+        //Capture all selected keys
+        selectedIDs = values.join(',');
+    }
+
+    </script>
+@using (Html.BeginForm("Index", "AprobacionOS", FormMethod.Post, new { @role = "form", @class = "form", @id = "myform" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdUsuarioAprobacion, new { @id = "IdUsuarioAprobacion" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id="IdTransaccionSession"})
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -36,7 +54,7 @@
                     <div class="col-md-2">
                         <div class="form-group">
                             <label for="IdSucursal">Sucursal*</label>
-                            @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
+                            @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id="IdSucursal" })
                             @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -99,14 +117,99 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_orden_servicio", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12">
+                        @Html.Action("GridViewPartial_aprobacion_os", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
+                    </div>
+                </div>
+            </div>
 
-  </div>
-        <!-- /.box-body -->
-        <div class="box-footer">
-            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+
+            <br />
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label for="MotivoAprobacion">Observación</label>
+                            @Html.TextAreaFor(q => q.MotivoAprobacion, new { @class = "form-control", @id = "MotivoAprobacion", @rows = 1 })
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box-footer">
+                <button type="button" class="btn btn-success" id="btn_aprobar" onclick="aprobar();">Aprobar</button>
+                <button type="button" class="btn btn-danger" id="btn_rechazar" onclick="rechazar();">Anular</button>
+            </div>
+
         </div>
-        <!-- /.box-footer-->
-    </div>
+                <!-- /.box-body -->
+                <div class="box-footer">
+                    [@Session["IdEmpresa"]] @Session["nom_empresa"]
+                </div>
+                <!-- /.box-footer-->
 
-}
+
+
+
+            </div>
+            }
+<script type="text/javascript">
+
+
+    function aprobar() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IDs: selectedIDs,
+            MotivoAprobacion: $("#MotivoAprobacion").val(),
+            IdUsuarioAprobacion: $("#IdUsuarioAprobacion").val()
+        }
+        $("#btn_aprobar").attr("disabled", true);
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("aprobar", "AprobacionOS", new { Area = "Compras" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#MotivoAprobacion").val("");
+                $("#myform").submit();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function rechazar() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IDs: selectedIDs,
+            MotivoAprobacion: $("#MotivoAprobacion").val(),
+            IdUsuarioAprobacion: $("#IdUsuarioAprobacion").val()
+        }
+        $("#btn_aprobar").attr("disabled", true);
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("rechazar", "AprobacionOC", new { Area = "Compras" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+                $("#MotivoAprobacion").val("");
+                $("#myform").submit();
+
+            },
+            error: function (error) {
+            }
+        });
+    }
+</script>
