--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
@@ -44,6 +44,7 @@
             e.NewValues["dc_Valor_debe"] = 0;
             //e.NewValues["IdCtaCble"] = null;
             e.NewValues["IdGrupoPresupuesto"] = null;
+            e.NewValues["dc_para_conciliar"] = false;
 
         };
         settings.Columns.Add(column =>
@@ -167,6 +168,19 @@
             column.VisibleIndex = 7;
             column.EditFormSettings.Visible = DefaultBoolean.True;
         });
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "dc_para_conciliar";
+            column.Caption = "Conci";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+        });
+
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_debe").DisplayFormat = "Debe {0:c2}";
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_haber").DisplayFormat = "Haber {0:c2}";
 
