--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
@@ -82,7 +82,7 @@
                 p.Columns.Add("bo_Descripcion", "Bodega");
                 p.ValueType = typeof(string);
                 //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
-                p.BindList(ViewBag.lst_bodega);
+                p.BindList(new Core.Erp.Bus.General.tb_bodega_Bus().get_list(Convert.ToInt32(Core.Erp.Web.Helps.SessionFixed.IdEmpresa),false));
                 p.ClientSideEvents.BeginCallback = "BodegaComboBox_BeginCallback";
                 p.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
             });
