--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
@@ -371,6 +371,8 @@
                 //$("#pf_atencion_a").val(data.info_persona.pe_nombreCompleto);
                 $("#IdVendedor").val(data.IdVendedor);
                 $("#IdTerminoPago").val(data.IdTerminoPago);
+                get_info_termino_pago();
+                
             },
             error: function (error) {
                 alert(error);
