--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
@@ -478,10 +478,10 @@
     }
 
     function OnSelectedSucursalChanged() {
-        GridViewPartial_producto_por_bodega.GetEditor("IdBodega").PerformCallback();
+        IdString.PerformCallback();
     }
     function BodegaComboBox_BeginCallback(s, e) {
-        e.customArgs["IdSucursal"] = IdSucursal.GetValue();
+        e.customArgs["FX_IdSucursalProdPorBod"] = IdSucursal.GetValue();
     }
 
     function OnSelectedProductoChanged(s, e) {
