--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
@@ -525,9 +525,9 @@
     }
 
     function OnSelectedSucursalChanged() {
-        GridViewPartial_producto_por_bodega.GetEditor("IdString").PerformCallback();
+        IdString.PerformCallback();
     }
     function BodegaComboBox_BeginCallback(s, e) {
-        e.customArgs["IdSucursal"] = IdSucursal.GetValue();
+        e.customArgs["FX_IdSucursalProdPorBod"] = IdSucursal.GetValue();
     }
 </script>
