--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -528,11 +528,11 @@
             $("#link_general").click();        
     }
 
-    function OnSelectedSucursalChanged() {        
-        GridViewPartial_producto_por_bodega.GetEditor("IdBodega").PerformCallback();
+    function OnSelectedSucursalChanged() {
+        IdString.PerformCallback();
     }
     function BodegaComboBox_BeginCallback(s, e) {
-        e.customArgs["IdSucursal"] = IdSucursal.GetValue();
+        e.customArgs["FX_IdSucursalProdPorBod"] = IdSucursal.GetValue();
     }
 </script>
 
