--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/_GridViewPartial_CreditoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/_GridViewPartial_CreditoBanco.cshtml
@@ -82,8 +82,6 @@
         });
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
         settings.Columns.Add("IdCbteCble", "ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("ba_descripcion", "Cuenta").Width = Unit.Percentage(30);
-        settings.Columns.Add("cb_Observacion", "Observación").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
             column.FieldName = "cb_Fecha";
@@ -91,12 +89,21 @@
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(10);
         });
+        settings.Columns.Add("ba_descripcion", "Cuenta").Width = Unit.Percentage(20);
+        settings.Columns.Add("cb_Observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
             column.FieldName = "cb_Valor";
             column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
-            column.Width = Unit.Percentage(8);
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "ValorBanco";
+            column.Caption = "V. Banco";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+            column.Width = Unit.Percentage(10);
         });
         settings.Columns.Add(column =>
         {
@@ -107,7 +114,8 @@
             {
 
             });
-        }); settings.Columns.Add(column =>
+        });
+        settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
             {
@@ -115,6 +123,9 @@
             });
             column.Width = Unit.Percentage(5);
         });
+        settings.Settings.ShowFooter = true;
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "cb_Valor").DisplayFormat = "{0:n2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "ValorBanco").DisplayFormat = "{0:n2}";
     });
 }
 @grid.Bind(Model).GetHtml()
